WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263821
[WebGPU] GPUTexture.createView fails when the format is not specified and the texture is a depth-stencil texture and aspect is depth-only
https://bugs.webkit.org/show_bug.cgi?id=263821
Summary
[WebGPU] GPUTexture.createView fails when the format is not specified and the...
Mike Wyrzykowski
Reported
2023-10-27 20:06:32 PDT
[WebGPU] GPUTexture.createView fails when the format is not specified and the texture is a depth-stencil texture and aspect is depth-only
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-27 20:06:53 PDT
<
rdar://problem/117615196
>
Mike Wyrzykowski
Comment 2
2023-10-27 21:43:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19676
EWS
Comment 3
2023-10-30 11:22:36 PDT
Committed
269960@main
(26ad5b379cb6): <
https://commits.webkit.org/269960@main
> Reviewed commits have been landed. Closing PR #19676 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug