[WebGPU] GPUTexture.createView fails when the format is not specified and the texture is a depth-stencil texture and aspect is depth-only https://bugs.webkit.org/show_bug.cgi?id=263821 <radar://117615196>

Reviewed by Tadeu Zagallo.

If the texture format is not specified, we should default to undefined
and then compute the correct format later.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUTextureImpl.cpp:
(WebCore::WebGPU::TextureImpl::createView):

* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
Pass format to avoid adding an overload.

* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::usage):
Need this usage to create compatible depth stencil views.

(WebGPU::Device::createTexture):
(WebGPU::resolvedPixelFormat):
Return a compatible depth or stencil format if needed, otherwise the original format.
(WebGPU::Texture::createView):

Canonical link: https://commits.webkit.org/269960@main